--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,8 @@
 ---
 stages:
   - test
+  - update-check
+  - update
 
 lint:
   image: registry.gitlab.com/gitlab-org/gitlab-build-images:golangci-lint-alpine
@@ -32,3 +34,46 @@ go_test:
     when: always
     reports:
       junit: report.xml
+
+check update:
+  image: registry.fsrv.services/debian-base:latest
+  stage: update-check
+  needs:
+    - go_fmt
+    - go_test
+    - lint
+  before_script:
+    - apt update
+    - apt install -y curl python3 bash jq
+  script:
+    - export DEB_VERSION=$(curl https://sources.debian.org/api/src/distro-info-data/ | jq -r '.versions[0].version')
+    - bash -x data/generator.sh ubuntu,debian $DEB_VERSION
+  artifacts:
+    when: always
+    paths:
+      - data/*.json
+
+commit_update:
+  image: registry.fsrv.services/debian-base:latest
+  stage: update
+  needs:
+    - check update
+  before_script:
+    - apt update
+    - apt install -y openssh-client jq python3
+    - eval $(ssh-agent)
+    - cat ${UPDATE_SSH_KEY} | ssh-add -
+    - git config user.email "bot@fsrv.xyz"
+    - git config user.name "gitlab-bot"
+    - git remote remove update_origin || true
+    - git remote add update_origin "git@$CI_SERVER_HOST:$CI_PROJECT_PATH.git"
+    - mkdir ~/.ssh && ssh-keyscan -H $CI_SERVER_HOST >> ~/.ssh/known_hosts
+  script:
+    - |
+      if test -n "$(git status --porcelain)"; then
+        git checkout -b "update_deb_$(date +%F_%H-%M)"
+        git add data/*.json
+        git commit -m "update dist-info-data debian package $(date +%F_%H:%M)"
+        git push update_origin HEAD
+      fi
+
